added home page, and side bar. still working on token authorization

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+ver 
+    npm react typescript e tailwind
 
-npm react typescript e tailwind
-npm install react-router-dom
+comandos
+
+    npm install react-router-dom
+    npm install lucide-react
